force-app/main/default/objects/msmxSheet__MashmatrixPermissionObjectAccess__mdt/msmxSheet__MashmatrixPermissionObjectAccess__mdt.object-meta.xml
<CustomObject>
    <label>Mashmatrix Permission Object Access</label>
</CustomObject>