force-app/main/default/objects/msmxSheet__MashmatrixPermissionObjectAccess__mdt/fields/msmxSheet__AccessibleFieldNames__c.field-meta.xml
<CustomField>
    <fullName>msmxSheet__AccessibleFieldNames__c</fullName>
    <label>Accessible Field Names</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>