force-app/main/default/objects/msmxSheet__MashmatrixPermissionObjectAccess__mdt/fields/msmxSheet__AllowDelete__c.field-meta.xml
<CustomField>
    <fullName>msmxSheet__AllowDelete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Delete Records</label>
    <type>Checkbox</type>
</CustomField>