force-app/main/default/objects/msmxSheet__MashmatrixPermissionObjectAccess__mdt/fields/msmxSheet__DeleteLimit__c.field-meta.xml
<CustomField>
    <fullName>msmxSheet__DeleteLimit__c</fullName>
    <label>Delete Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>