force-app/main/default/objects/msmxSheet__MashmatrixPermissionObjectAccess__mdt/fields/msmxSheet__FieldLevelAccessControlEnabled__c.field-meta.xml
<CustomField>
    <fullName>msmxSheet__FieldLevelAccessControlEnabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Field-level Access Control Enabled</label>
    <type>Checkbox</type>
</CustomField>