force-app/main/default/objects/msmxSheet__MashmatrixPermissionObjectAccess__mdt/fields/msmxSheet__HideInDescription__c.field-meta.xml
<CustomField>
    <fullName>msmxSheet__HideInDescription__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hide in Description</label>
    <type>Checkbox</type>
</CustomField>