force-app/main/default/objects/msmxSheet__MashmatrixPermissionObjectAccess__mdt/fields/msmxSheet__PermissionName__c.field-meta.xml
<CustomField>
    <fullName>msmxSheet__PermissionName__c</fullName>
    <externalId>true</externalId>
    <label>Permission Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>