force-app/main/default/objects/msmxSheet__MashmatrixPermissionObjectAccess__mdt/fields/msmxSheet__UpdateableFieldNames__c.field-meta.xml
<CustomField>
    <fullName>msmxSheet__UpdateableFieldNames__c</fullName>
    <label>Updateable Field Names</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>